update languages, add status visualiser to rake

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -7,6 +7,7 @@ ar:
     cant_join_subgroup: "لا يمكنك الانضمام إلى مجموعة فرعية إذا لم تكن عضوا في المجموعة الأم."
     cant_modify_position: "لقد تم إغلاق هذا الإقتراح."
     cant_state_position: "لقد تم إغلاق هذا الإقتراح."
+    cant_view_member_profile: "لا يمكنك عرض الملف الشخصي للعضو لأنك لست في نفس المجموعة."
     discussion_not_created: "تعذر إنشاء المناقشة."
     group_not_archived: "تعذرت أرشفة المجموعة."
     invalid_close_date: "تاريخ الإغلاق غير صالح، يرجى التأكد من هذا التاريخ لم يمر."
@@ -15,6 +16,11 @@ ar:
     permission_to_invite: "ليس لديك سماحية لدعوة أعضاء جدد."
     position_not_updated: "تعذر تحديث الموقف."
     settings_not_updated: "لم يتم تحديث إعداداتك."
+    group_request_already_accepted: "عذرا! هذه الدعوة غير صالحة أو قد تم بالفعل قبولها."
+    group_request_invalid_token: "عذرا! رمز الصلاحية غير صالح"
+    group_private_or_not_found: "لم يتم إيجاد المجموعة.\n\nهذه المجموعة قد تكون خاصة. إن كان شخص ما قد أعطاك هذا الرابط، اطلب منه أن يدعوك إلى المجموعة."
+    group_already_setup: "المجموعة التي تحاول إعدادها موجودة بالفعل."
+    proposal_already_exists: "هناك بالفعل اقتراحا مفتوحا مسبقا في هذه المناقشة."
   alert:
     duplicate_email: " إن %{which_email} موجود أصلا بالفعل في المجموعة."
   notice:
@@ -52,15 +58,15 @@ ar:
     distance_in_words:
       less_than_x_seconds:
         zero: "ثانية"
-        one: "ثانية"
-        two: "ثانية"
+        one: "ثانية واحدة"
+        two: "ثانيتان"
         few: "%{count} ثوان"
         many: "%{count} ثوان"
         other: "%{count} ثوان"
       x_seconds:
         zero: "ثانية"
-        one: "ثانية"
-        two: "ثانية"
+        one: "ثانية واحدة"
+        two: "ثانيتان"
         few: "%{count} ثوان"
         many: "%{count} ثوان"
         other: "%{count} ثوان"
@@ -88,8 +94,11 @@ ar:
   tagline: "إنشاء عالم يكون فيه من السهل لأي كان المشاركة في قرارات تؤثر عليهم."
   click_to_dismiss: "انقر هنا لإغلاق هذه الرسالة"
   generic_confirm: "هل أنت متأكد؟"
+  invite_people: "قم بدعوة الناس"
+  edit_memberships: 'عدّل العضويات'
   add_new_member: "أضف عضوا جديدا"
   invite_members_to_group: "قم بدعوة أعضاء إلى %{which_group}"
+  remaining_invites: "الدعوات المتبقية"
   get_in_touch_link: "تواصل معنا"
   email_members_in_group: "أرسل بريدا إلكترونيا إلى أعضاء %{which_group}"
   subject_error: "يرجى ملء حقل العنوان"
@@ -102,3 +111,202 @@ ar:
   confirm_leave_group: "هل أنت متأكد من أنك تريد مغادرة %{which_group}؟"
   deactivate_group: "إلغاء تفعيل المجموعة"
   confirm_deactivate_group: "إنتظر!!! هل أنت متأكد من أنك تريد إلغاء تفعيل %{which_group}؟ لن يعود بإمكانك بعدها عرض المجموعة. لكن إن أردت إعادة تفعيل المجموعة فيمكنك طلب ذلك منا بإرسال رسالة إلكترونية على العنوان contact@loomio.org."
+  invited_users: "الأعضاء المدعوون"
+  members: "الأعضاء"
+  confirm_remove_user: "هل أنت متأكد من أنك تريد حذف %{which_user} من المجموعة؟"
+  membership_requests: "طلبات الإنضمام"
+  confirm_approve_membership_request: "هل أنت متأكد من أنك تريد إضافة %{which_user} إلى المجموعة؟"
+  ignore_request: "تجاهل الطلب"
+  confirm_ignore_membership_request: "هل أنت متأكد من أنك تريد تجاهل طلب الإنضمام من %{which_user}؟"
+  membership_requested: "تم طلب الإنضمام"
+  request_membership: "قم بطلب الإنضمام"
+  confirm_remove_membership_request: "هل أنت متأكد من أنك تريد سحب طلب انضمامك لهذه المجموعة؟"
+  subgroups: "المجموعات الفرعية"
+  create_a_subgroup: "أنشئ مجموعة فرعية"
+  select_members_to_add: "قم باختيار أعضاء لإضافتهم إلى %{which_group}"
+  empty_parent_group: "يرجى إضافة أعضاء إلى المجموعة الأم أولا."
+  invite_members: "قم بدعوة أعضاء جدد"
+  new_subgroup: "مجموعة فرعية جديدة"
+  create_subgroup: "أنشئ مجموعة فرعية"
+  creating_subgroup: "يتم إنشاء المجموعة الفرعية"
+  new_group: "مجموعة جديدة"
+  create_group: "أنشئ مجموعة"
+  creating_group: "يتم إنشاء المجموعة"
+  edit_group: "عدل المجموعة"
+  update_group: "حدّث المجموعة"
+  updating_group: "جار تحديث المجموعة"
+  start_a_discussion: "ابدأ نقاشا"
+  group_description: "وصف المجموعة"
+  discussion_items:
+    new_discussion: "أنشأ النقاش"
+    new_motion: "أنشأ اقتراحا"
+    motion_closed:
+      by_user: "أغلق الإقتراح"
+      by_expiry: "تم إغلاق الإقتراح"
+    motion_close_date_edited: "قام بتغيير تاريخ إغلاق الإقتراح"
+    discussion_title_edited: "قام بتغيير عنوان النقاش"
+    discussion_description_edited: "قام بتغيير وصف النقاش"
+  discussion: "النقاش"
+  current_decision: "القرار الحالي"
+  previous_decisions: "القرارات السابقة"
+  see_previous_decisions: "اعرض النقاشات السابقة"
+  create_new_proposal: "أنشئ اقتراحا جديدا"
+  empty_decision_list_html: "هل أنت جاهز لاتخاذ قرار؟ <br> يمكن لأي كان أن يطرح مقترحا."
+  empty_decision_index: "هذه المجموعة لم تتخذ بعد أية قرارات."
+  empty_discussion_list: "لا يوجد نشاط في هذا النقاش بعد."
+  discussion_context:
+    see_revision_history: "اعرض تاريخ التعديلات"
+  description_history:
+    header: "تاريخ التعديلات"
+    subheader: "النسخة"
+    edited_by: "تم التعديل منذ %{when} من قبل %{who}"
+    restore: "(قم باسترجاع هذه النسخة)"
+    applying_changes: "(جار تطبيق التعديلات...)"
+    previous: "السابق"
+    next: "التالي"
+  comment_form_placeholder: "قل شيئا ما..."
+  comment_form_submit_button: "أكتب تعليقا"
+  liked_by: "نال إعجاب %{who}"
+  delete_comment: "احذف التعليق"
+  confirm_delete_comment: "هل أنت متأكد من أنك تريد حذف هذا التعليق؟"
+  markdown_settings_more_info: "معلومات إضافية..."
+  delete_discussion: "احذف النقاش"
+  confirm_delete_discussion: "هل أنت متأكد من أنك تريد حذف هذا النقاش بشكل دائم؟"
+  new_proposal: "اقتراح جديد"
+  close_proposal: "أغلِق الإقتراح"
+  confirm_close_proposal: "هل أنت متأكد من أنك تريد إغلاق هذا الإقتراح؟"
+  change_proposal_close_date: "قم بتغيير تاريخ الإغلاق"
+  change_proposal_close_date_header: "قم بتغيير تاريخ إغلاق الإقتراح '%{which}'"
+  proposal_close_date_error: "يرجى إعطاء تاريخ إغلاق مستقبلي"
+  proposal_closing_when: "سيتم الإغلاق خلال %{when}"
+  proposal_closed_when: "تم الإغلاق منذ %{when}"
+  proposed_when_by_who: "تم اقتراحه من قبل %{who} منذ %{when}"
+  engagement_on_open_proposal: "قام %{percent}%% من الأعضاء بإبداء موقفهم (%{numerator}/%{denominator})"
+  engagement_on_closed_proposal: "قام %{percent}%% من الأعضاء بإبداء موقفهم (%{numerator}/%{denominator})"
+  state_your_position: "قم بإبداء موقفك"
+  positions: "مواقف الأعضاء"
+  yes_position: "موافق"
+  yes_details: "أنا موافق على هذا الإقتراح وأرغب بالمضي به قدما."
+  abstain_position: "أمتنع"
+  abstain_details: "أنا سعيد بترك المجموعة تقرر عني."
+  no_position: "غير موافق"
+  no_details: "أظن أنه بإمكاننا العمل على قرار أفضل."
+  block_position: "أعترض"
+  block_details: "لدي إعتراضات قوية على هذا الإقتراح، ولست موافقا على المضي به قدما."
+  not_voted: "[اعرض الأعضاء الذين لم يقرروا بعد]"
+  outcome_placeholder: "ماذا كانت نتيجة هذا الإقتراح؟"
+  help:
+    get_in_touch: "إتصل معنا"
+    get_in_touch_description_html: "إذا كان لديك أي أسئلة أو تعليقات، <a href='%{link}'>تواصل معنا</a>."
+    getting_started: "من أجل البدء"
+    getting_started_description: "على اليسار، تناقش المجموعة موضوعا وتتبادل الأفكار والمعلومات. عندما يكون هناك قرار يتعين على المجموعة اتخاذه، فإنه يظهر على اليمين."
+    have_a_discussion: "أجر نقاشا"
+    have_a_discussion_description: "يتم وضع موضوع النقاش وأي معلومات لازمة متعلقة به في أعلى الصفحة. يمكنك استخدام مربع التعليق لإضافة صوتك في النقاش."
+    help: "مساعدة"
+    how_it_works: "كيفية عمل Loomio"
+    join_the_community: "إنضم للمجتمع"
+    join_the_community_description_html: "نرحب بالجميع للإنضمام لمجتمع Loomio حيث نتحدث حول أفضل السبل لاستخدام الأداة وكيف يمكن تحسينها.<br /><br /><a href='https://www.loomio.org/groups/3'>أنقر هنا للإنتقال إلى مجموعة مجتمع Loomio</a>."
+    make_a_decision: "اتخذ قرارا"
+    make_a_decision_description: "عندما تصبح المجموعة جاهزة لاتخاذ قرار، فإنه يمكن لأي كان أن يطرح مقترحا. ضع خطا واضحا لمسار العمل وأعط ما يكفي من المعلومات بحيث يدرك الجميع مالذي تعنيه الموافقة أو عدمها."
+    positions_agree_description: "<span>\"موافق\"</span> تعني أنك راضي بالمقترح."
+    positions_abstain_description: "<span>\"امتنع\"</span> تعني أنك غير متأكد، أو أنك سعيد بترك المجموعة تقرر عنك."
+    positions_disagree_description: "<span>\"غير موافق\" تعني أنك تظن أن هناك بديل أفضل، ولكنك على استعداد للمضي مع قرار المجموعة."
+    positions_block_description: "<span>\"أعترض\"</span> تعني أن لديك إعتراضات جدية وأنك ستكون غير راض إذا تم تبني المقترح."
+    video_tutorial: "الفيديو التعليمي"
+    video_tutorial_description: "شاهد الفيديو لتحصل على عرض سريع حول كيفية استخدام Loomio."
+  resend_confirmation: "أعد إرسال تعليمات تأكيد كلمة السر"
+  new_password: "كلمة السر الجديدة"
+  confirm_new_password: "قم بتأكيد كلمة السر الجديدة"
+  change_your_password: "قم بتغيير كلمة السر"
+  change_my_password: "قم بتغيير كلمة السر"
+  send_password_reset: "أرسل لي تعليمات إعادة تحديد كلمة السر"
+  blank_details: "(اترك المساحة خالية إذا لم ترغب بتغييرها)"
+  password_confirmation: "تأكيد كلمة السر"
+  current_password: "كلمة السر الحالية"
+  password_details: "(نحتاج كلمة سرك الجديدة لتأكيد تعديلاتك)"
+  cancel_my_account: "قم بإلغاء حسابي"
+  remember_me: "تذكرني"
+  signing_in: "تسجيل الدخول"
+  forgot_your_password: "هل نسيت كلمة سرك؟"
+  confirmation_not_received: "لم تصلك تعليمات تأكيد كلمة السر؟"
+  unlock_not_received: "لم تصلك تعليمات فتح القفل؟"
+  invitation:
+    recipients: "يرجى إدخال عناوين بريد إلكتروني تفصل بينها فواصل:"
+  motion_form:
+    name_helper: "اجعل العنوان واضحا وموجزا قدر الإمكان."
+  vote_form:
+    header: "قم بإبداء موقفك"
+    edit: "عدّل موقفك"
+    placeholder: "أعط سببا يوضح موقفك (إختياري)"
+    your_position: "موقفك"
+    your_statement: "بيانك"
+    submit: "أرسل الموقف"
+    update: "عدّل الموقف"
+  email_preferences_form:
+    header: "إعدادات البريد الإلكتروني"
+    daily_activity_summary: "ملخص النشاط اليومي"
+    daily_activity_subscription: "أرسل لي يوميا رسالة إلكترونية تلخص ما يحصل في مجموعاتي."
+    global_notifications: "التنبيهات "
+    proposal_closing_soon_subscription: "قم بتذكيري بالمقترحات قبل إنتهاء أي منها ب ٢٤ ساعة"
+    mentions_subscription: "أرسل لي رسالة إلكترونية عندما يذكرني أحدهم في تعليق ما"
+    group_activity_notifications: "تنبيهات نشاطات المجموعة"
+    update_preferences: "حدّث الإعدادات"
+  new_user_form:
+    create_an_account: "أنشئ حسابا"
+  simple_form:
+    labels:
+      discussion:
+        title: "العنوان"
+        description: "سياق النقاش"
+      motion:
+        name: "العنوان"
+        description: "التفاصيل"
+      user:
+        name: "الإسم الكامل"
+        email: "البريد الإلكتروني"
+        password: "كلمة السر"
+        language_preference: "اللغة"
+    placeholders:
+      discussion:
+        title: "العنوان"
+        description: "إشرح بعض الشيء عن موضوع وسياق النقاش..."
+      motion:
+        name: "ما هو إتجاه العمل الذي تقترحه؟"
+        description: "أعط ما يكفي من المعلومات بحيث يدرك الجميع مالذي تعنيه الموافقة أو عدمها."
+  helpers:
+    submit:
+      discussion:
+        create: "إبدأ نقاشا"
+      motion:
+        create: "إبدأ مقترحا"
+      user:
+        create: "أنشئ حسابا"
+        update: "حدّث الإعدادات"
+  ago: "منذ %{quantity_of_time}"
+  approve: "موافق"
+  back: "الرجوع"
+  cancel: "إلغاء"
+  change: "تغيير"
+  close: "إغلاق"
+  closed: "مغلق"
+  delete: "حذف"
+  edit: "تحرير"
+  email_address: "عنوان البريد الإلكتروني"
+  enable: "تفعيل"
+  disable: "تعطيل"
+  group: "المجموعة"
+  groups: "المجموعات"
+  like: "يعجبني"
+  loading: "جار التحميل"
+  new_activity: "نشاط جديد"
+  outcome: "النتيجة"
+  password: "كلمة السر"
+  options: "الخيارات"
+  save: "حفظ"
+  saving: "جار الحفظ"
+  send_invite: "أرسل دعوة"
+  send_email: "أرسل رسالة إلكترونية"
+  show_more: "أظهر المزيد"
+  subject: "الموضوع"
+  unlike: "أخالف هذا"
+  update: "تحديث"
