--- a/config/locales/frontpage.sl.yml
+++ b/config/locales/frontpage.sl.yml
@@ -3,6 +3,7 @@ sl:
     link:
       blog: 'Blog'
       contact: 'Kontakt'
+      donate: 'Donirajte še danes'
       log_in: 'Prijava'
       more: 'Več'
       top: 'Vrh'
