--- a/config/locales/be-BY.yml
+++ b/config/locales/be-BY.yml
@@ -1,6 +1,13 @@
 be-BY:
+  explore:
+    header: "Праглядзець адкрытыя групы"
   try_it:
     header: "Паспрабаваць Loomio"
+    start_a_group: "Стварыце групу каб прымаць вырашенні ў сваёй супольнасці"
+    join_the_community: "Далучайцеся да групы супольнасці Loomio "
+    loomio_community_info: "Тут мы абмяркоўваем і прымаем вырашэнні якім будзе Loomio"
+    explore_groups: "Знайдзіце іншыя групы на Loomio"
+    explore_groups_info: "Праглядзіце астатнія выдатныя групы на Loomio і далучайцеся да іх!"
   activerecord:
     errors:
       messages:
@@ -8,29 +15,60 @@ be-BY:
   errors:
     messages:
       email: "Нядзейсны email адрас"
+  attachment:
+    error:
+      too_large: "Файл, які вы спрабавалі далучыць больш за 50Мб, калі ласка абярыцы файл паменьш."
+  time:
+    formats:
+      for_today: '%l:%M %P'
+  date:
+    formats:
+      for_this_year: '%e %b'
+      for_another_year: '%-d/%-m/%y'
   devise:
     invitations:
-      send_instructions: 'Запрашэнне адасланае да %{email}.'
+      send_instructions: 'Запрашэнне даслана на %{email}.'
       updated: 'Акаунт створаны.'
+      no_invitations_remaining: "Запрашэнняў больш не засталося"
+    mailer:
+      invitation_instructions:
+        subject: 'Хтосці запрасіў вас далучыцца да іх групы на Loomio'
   error:
     access_denied: "У вас няма дазволу на гэтае дзеянне."
     cant_join_subgroup: "Вы не можаце далучыцца да падгрупы не з'яўляючыся удзельнікам зыходнай групы."
     cant_modify_position: "Гэтая прапанова ужо закрытая."
     cant_state_position: "Гэтая прапанова ужо закрытая."
+    cant_view_member_profile: "Вы не можаце праглядзець профіль удзельніка бо вы не знаходзіцеся ў той жа групе."
+    contribution: "Калі ласка, увайдзіце каб зрабіць ахвяраванне"
     discussion_not_created: "Немагчыма стварыць абмеркаванне."
     discussion_not_moved: "У Вас няма дазволу пераносіць гэта абмеркаванне ў %{destination_group.name}"
     group_not_archived: "Групу немагчыма заархіваваць. "
     invalid_close_date: "Няслушная дата закрыцця абмервакавання, калі ласка праверце ці не прашла ўжо ваша дата."
     invalid_email: "Калі ласка, увядзіце, па меншай меры, адзін дзеясны email адрас."
     image_upload_fail: "Немагчыма запампаваць выяву. Упэўнеціся, што выява выжыць не больш 1 MB і яе фармат .jpeg, .png, ці .gif."
+    motion_closing_inputs: "Няслушная дата закрыцця"
+    motion_outcome_not_created: "Немагчымаць апублікаваць вынік"
+    motion_outcome_not_updated: "Немагчыма абнавіць вынік"
+    only_group_coordinator_destroy: "Вы не можаце пакінуць групу, таму што вы адзіны каардынатар. Вы можаце адключыць вашу групу праз меню налад ці <a href='%{add_coordinator}'>дадаць яшчэ аднаго каардынатара</a> да групы."
+    only_group_coordinator_remove_admin: "У групы павінен быць каардынатар. Хаціце дадаць іншага каардынатара?"
     permission_to_invite: "Вы не маеце дазволу дадаваць новых удзельнікаў."
     position_not_updated: "Немагчыма абнавіць меркаванне."
     settings_not_updated: "Немагчыма захаваць вашы новыя налады."
     group_request_already_accepted: "Выбачайце! Гэтае запрашэнне нядзеяснае альбо ўжо было прынята."
+    group_private_or_not_found: "Група не знойдзена. \n\nГэта група можа быць прыватнай. Калі хтосці даў вам гэту спасылку, запытайце ў іх, каб вас запрасілі ў групу."
+    group_already_setup: "Група, якую вы спрабуеце распачаць, ужо існуе."
+    proposal_already_exists: "У гэтым абмеркаванні ўжо ёсць адкрытая прапанова."
+    user_with_email_address_already_in_group: "Карыстальнік з такім паштовым адрасам ўжо ўдзельнічае ў групе."
+    you_have_already_requested_membership: "Вы ўжо запытвалі ўдзел у гэтай групе."
+    you_are_already_a_member_of_this_group: "Вы ўжо з'яўляецеся ўдзельнікам гэтай групы."
+    not_found: "Аб'ект не знойдзены. Ён мог быць выдалены."
   alert:
     duplicate_email: "%{which_email} ужо ў гэтай групе."
   notice:
+    new_contacts_imported: "Спрацавала! Вы можаце пісаць імёны ў поле ніжэй і мы будзем прапаноўваць паштовыя адрасы."
     admin_rights_removed: "У карыстальніка %{which_user} зняты правы кардынатара."
+    user_added: "Карыстальнік %{user_email_or_name} быў дададзены да групы."
+    new_user_added: "Карыстальнік %{user_email_or_name} будзе дададзены да групы пасля рэгістрацыі на Loomio."
     member_removed: "Удзельнік выдалены."
     membership_approved: "Чалецтва зацверджана."
     membership_request_canceled: "Запыт чалецтва адменены."
@@ -133,7 +171,33 @@ be-BY:
   prompt_user_to_join:
     header: "Для ўдзелу далучыціся да групы"
     body: "Каб пракаментаваць альбо прагаласаваць, трэба быць удзельнікам гэтай групы."
+  group_form:
+    confirm_all_discussions_will_be_made_private_message: "Калі вы працягнеце, усе адкрытыя для ўсіх абмеркаванні стануць прыватнымі."
+    confirm_all_discussions_will_be_made_public_message: "Вы ўпэўнены? Калі вы працягнеце, усе прыватныя абмеркаванні стануць адкрытымі для ўсіх."
+    members_can:
+      edit_discussions: Рэдагаваць кантэкст любога абмеркавання ў групе
+      start_discussions: Распачаць абмеркаванні
+    parent_members_can_see_discussions:
+      label: Канфеденціяльнасць абмеркавання
+      'true': 'Любы з %{parent_group_name} можа бачыць абмеркаванні'
+      'false': Толькі ўдзельнімі могуць бачыць абмеркаванні
+    discussion_privacy_options:
+      label: Хто можа бачыць абмеркаванні?
+      hint: Любы чалавек можа прагляддзець абмеркаванні, адкрытыя для ўсіх.
+      public_only_html: Толькі адкрытыя для ўсіх абмеркаванні
+      public_or_private_html: Дазволіць прыватныя і адкрытыя для ўсіх абмеркаванні
+      private_only_html: Толькі прыватныя абмеркаванні
+  group_permissions:
+    c2: Рэдагаваць назву і кантэкст любога абмеркавання.
+    c3: Перанесці абмеркаванне з адной групы ў іншую.
+    c8: Выдаліць абмеркаванні.
+    c11: Распачаць абмеркаванні
+    m5: Рэдагаваць назву і кантэкст любога абмеркавання.
+  group_privacy:
+    visible_to:
+      parent_members: 'Прыватная група. Бачна толькі ўдзельнікам і людзям з %{parent_group_name}.'
   setup_steps_title: "Наступныя крокі"
+  setup_step_1: "Праглядзіце нашы абмеркаванні для прыкладу"
   setup_step_2: "Распачаць сваё першае абмеркаванне"
   setup_step_3: "Запрасіць людзей у сваю групу"
   invite_people: "Запрасіць людзей"
@@ -203,6 +267,15 @@ be-BY:
   create_new_proposal: "Стварыць новую прапанову"
   empty_decision_index: "Гэта група пакуль не зрабіла ніякіх вырашэнняў."
   empty_discussion_list: "У гэтым абмеркаванні пакуль няма ніякай актыўнасці."
+  go_to_add_comment_html: "Каментар можна дадаць <a href='%{href}'>унізе абмеркавання</a>."
+  discussion_list:
+    empty:
+      no_discussions: "Ні ў адной з Вашых груп няма абмеркаванняў."
+      no_discussions_in_group: "У гэтай гупы пакуль няма абмеркаванняў."
+      no_public_discussions: "У гэтай групе няма адкрытых для ўсіх абмеркаванняў."
+      discussions_are_private: "Усе абмеркаванні ў гэтай групе прыватныя."
+      request_membership_html: "Каб убачыць прыватныя абмеркаванні, <a href='%{href}'>зрабіце запыт пра далучэнне да групы.</a>"
+      log_in_html: "Калі вы удзельнік, <a href='%{href}'>увайдзіце</a> каб убачыць любыя прыватныя абмеркаванні."
   discussion_context:
     see_revision_history: "Паглядзець гісторыю змен"
     see_history: "Паглядзець гісторыю"
@@ -222,6 +295,9 @@ be-BY:
   confirm_delete_comment: "Вы ўпэўнены, што хаціце выдаліць гэты каментар?"
   markdown_settings_more_info: "Больш інфармацыі..."
   edit_discussion: "Рэдагаваць абмеркаванне"
+  move_discussion: "Перанесці абмеркаванне"
+  move_discussion_to_hidden_group: "Гэта абмеркаванне зараз адкрытае для ўсіх. Перанос у гэту скрытую групу зробіць яго прыватным."
+  move_discussion_to_public_group: "Гэта абмеркаванне зараз прыватнае. Перанос у гэту адкрытую для ўсіх групу зробіць яго таксама адкрытым."
   move_discussion_where: "Куды б Вы хацелі перанесці гэтае абмеркаванне?"
   delete_discussion: "Выдаліць абмеркаванне"
   confirm_delete_discussion: "Вы ўпэўнены, што хочаце назаўжды выдаліць гэта абмеркаванне?"
@@ -376,25 +452,52 @@ be-BY:
       content: "Вас запрасілі для ўдзелу ў абмеркаванні %{discussion}"
       message_intro: "%{who} кажа:"
       link: "Далучыцца да абмеркавання"
+    to_join_group:
+      subject: "%{member} запрасіў вас далучыцца да %{group_name} на Loomio"
+    to_start_group:
+      subject: "Стварыць новую групу на Loomio: %{group_name}"
     user_added_to_a_group:
       subject: "%{who} дадаў Вас да %{which_group}"
       content: "%{who} дадаў Вас да %{which_group} на Loomio. Клікніце сюды, каб перайсці да гэтай групы."
+    unsubscribe: "Адпісацца ці змяніць свае налады электроннай пошты:"
+    unsubscribe_html: "<a href='%{link_path}'>%{link_text}</a> каб адпісацца ці змяніць свае налады электроннай пошты."
+    view_comment: "Націсніце каб праглядзець каментар на Loomio"
+    view_discussion: "Націсніце сюды, каб праглядзець гэта абмеркаванне"
     invitation:
       hi: "Вітаем %{name},"
     proposal_closing_soon:
       closes_at: "Закрываецца а"
+      closes_in: "Закрываецца праз"
       closing_in_24_hours: "Закрыецца праз 24 гадзіны"
+      headline: "Прапанова %{author} у %{group} хутка зачыніцца:"
+      summary: "Рэзюмэ"
+    verification:
+      header: "Вы амаль скончылі!"
+      intro: "Калі ласка, націсніце на гэтую спасылку праверкі, каб завяршыць запыт:"
+      ignore: "Калі вы не запытвалі, каб далучыцца да Loomio ігнаруйце гэта паведамленне."
   about_loomio: "Аб Loomio"
+  ago: "%{quantity_of_time} таму"
   approve: "Пацвердзіць"
+  author: "Аўтар"
   back: "Назад"
   cancel: "Адмяніць"
   change: "Змяніць"
+  change_language: "Націсніце сюда каб карыстацца Loomio на %{language}"
   changing: "Змяняецца"
+  click_here: "Націсніце сюды"
   close: "Зачыніць"
   closing: "Зачыняяецца"
+  closed: "Закрыта"
+  coordinator: "Каардынатар"
+  decisions: "Рашэнні"
   delete: "Выдаліць"
+  details: "Падрабязнасці"
+  discussions: "Абмеркаванні"
   edit: "Рэдагаваць"
   email_address: "Адрас email"
+  enable: "Уключыць"
+  participation: "Удзел"
+  disable: "Адключыць"
   group: "Група"
   groups: "Групы"
   group_admin: "Каардынатар групы"
@@ -405,17 +508,22 @@ be-BY:
   name: "Імя"
   new_activity: "Новая дзейнасць"
   next: "Наступнае"
+  other: "Іншы"
   outcome: "Вынік"
   password: "Пароль"
   leave_this_field_blank: "заставіць гэтае поле пустым"
   photo: 'Здымак'
+  pricing: 'Кошты'
   prev: "Папярэдняе "
   more: "Больш..."
   translate: "Дапамажыце перакласці Loomio!"
   translate_field: "Паглядзець пераклад"
   loading_translation: "Загрузка пераклада"
   translate_this_string: "Перакласці на %{language}"
+  failed_translation: "Немагчыма скончыць пераклад"
   options: "Опцыі"
+  rss_subscribe: "Падпісацца на стужку"
+  ok_got_it: "Добра, зразумела!"
   remove: "Выдаліць"
   save: "Захаваць"
   saving: "Захоўваецца"
@@ -423,8 +531,105 @@ be-BY:
   send_invite: "Адаслаць запрашэнне"
   send_email: "Адаслаць email"
   show_more: "Паказаць больш"
+  start_a_group: "Стварыць групу"
+  starting: "Ствараем"
+  subject: "Тэма"
+  terms_of_service_html: "Націснуўшы %{button_text}, вы пагаджаецеся з <a href='%{link_path}' target='_blank'>умовамі выкарыстання</a> Loomio"
   thanks: "Дзякуй!"
   unlike: "Не падабаецца"
   time_until_close: "%{quantity_of_time} да закрыцця"
+  update: "Абнаўленне"
   facebook: "Facebook"
+  yahoo: "Yahoo"
   google: "Google"
+  persona: "Persona"
+  common:
+    back_to_discussion: "Назад да абмеркавання"
+    edited: Адрэдагавана
+    today: Сёння
+    months:
+      january: Студзень
+      february: Люты
+      march: Сакавік
+      april: Красавік
+      may: Травень
+      june: Чэрвень
+      july: Ліпень
+      august: Жнівень
+      september: Верасень
+      october: Кастрычнік
+      november: Лістапад
+      december: Снежань
+    abbr_months:
+      jan: Сту
+      feb: Лют
+      mar: Сак
+      apr: Кра
+      may: Тра
+      jun: Чэр
+      jul: Ліп
+      aug: Жні
+      sep: Вер
+      oct: Кас
+      nov: Ліс
+      dec: Сне
+    days:
+      monday: Панядзелак
+      tuesday: Аўторак
+      wednesday: Серада
+      thursday: Чацвер
+      friday: Пятніца
+      saturday: Субота
+      sunday: Нядзеля
+    abbr_days:
+      mon: Пан
+      tue: Аўт
+      wed: Сер
+      thu: Чац
+      fri: Пят
+      sat: Суб
+      sun: Няд
+    tiny_days:
+      mo: Пн
+      tu: Аў
+      we: Ср
+      th: Чц
+      fr: Пт
+      sa: Сб
+      su: Нд
+    please_wait: "Пачакайце, калі ласка"
+    privacy: "Канфідэнцыяльнасць"
+    private: "Прыватна"
+    public: "Адкрыта"
+    email: "Email"
+    start_group: "Стварыць групу!"
+  group_categories:
+    all: "Усе"
+    blank: "Без катэгорый"
+    economics: "Эканоміка"
+    activist: "Актывісты"
+    arts: "Мастацтва"
+    business: "Бізнес"
+    collective: "Калектыўная"
+    community_group: "Група супольнасці"
+    co_operative: "Кааператыўная"
+    democratic_organisation: "Дэмакратычная арганізацыя"
+    education: "Адукацыя"
+    environmental_group: "Экалагічная група"
+    family: "Сям'я"
+    local_government: "Мясцовы ўрад"
+    online_community: "Анлайн супольнасць"
+    religious_group: "Рэлігійная/Духоўная"
+    event: "Падзея"
+    open_source_software: "Адкрытае праграмнае забеспячэнне"
+    political_initiative: "Палітычная ініцыятыва"
+    social_enterprise: "Сацыяльнае прадпрыемства"
+    social_justice: "Сацыяльная справядлівасць"
+    advocacy_group: "Адвакацкая група"
+    science: "Навука"
+    technology: "Тэхналогіі"
+    sports: "Спорт"
+    youth: "Моладзь"
+    women: "Жанчыны"
+    media: "СМІ"
+    health: "Здароўе"
