minor language update

--- a/config/locales/frontpage.sr-RS.yml
+++ b/config/locales/frontpage.sr-RS.yml
@@ -46,7 +46,7 @@ sr-RS:
         sifry_html: '“Лумио је попунио простор између <strong>индивидуалног гласа</strong> и <strong>колективног одлучивања</strong>.”<div class="attributation">– Micah Sifry, уредник у <em><a href="http://techpresident.com">TechPresident</a></em></div>'
     team:
       header: 'О Лумију'
-      desc: 'Ми смо мали тим опен соурце девелопера и активиста који заступају социјалну правду, који раде у Енспирал у Аотери на Новом Зеланду, са широм мрежом пријатеља, симпатизера и саветника широм света.'
+      desc: 'Ми смо мали тим програмера отвореног извора и активиста који заступају социјалну правду, који раде у Енспиралу у Аотери на Новом Зеланду, са широм мрежом пријатеља, симпатизера и саветника широм света.'
     ideals:
       community:
         header: 'Заједницом вођена сарадња'
