--- a/config/locales/frontpage.sr.yml
+++ b/config/locales/frontpage.sr.yml
@@ -46,7 +46,7 @@ sr:
         sifry_html: '“Loomio je popunio prostor između <strong>individualnog glasa</strong> i <strong>kolektivnog odlučivanja</strong>.”<div class="attributation">– Micah Sifry, Urednik, <em><a href="http://techpresident.com">TechPresident</a></em></div>'
     team:
       header: 'O Lumiju'
-      desc: 'Mi smo mali tim open source developera i aktivista koji zastupaju socijalnu pravdu, koji rade u Enspiral u Aoteri na Novom Zelandu, sa širom mrežom prijatelja, simpatizera i savetnika širom sveta.'
+      desc: 'Mi smo mali tim programera otvorenog izvora i aktivista koji zastupaju socijalnu pravdu, koji rade u Enspiral u Aoteri na Novom Zelandu, sa širom mrežom prijatelja, simpatizera i savetnika širom sveta.'
     ideals:
       community:
         header: 'Zajednicom vođena kooperacija'
