--- a/config/locales/frontpage.be-BY.yml
+++ b/config/locales/frontpage.be-BY.yml
@@ -21,6 +21,7 @@ be-BY:
       services: 'Паслугі'
     hero:
       head_html: 'Нашаму свету патрэбен лепшы шлях для <strong>прыняцця сумесных вырашенняў</strong>.'
+      desc_html: 'Loomio - бясплатнае і <a href="https://github.com/loomio/loomio">адкрытае</a> праграмнае забеспячэнне, якое дае магчымасць кожнаму чалавеку, дзе б ён ні знаходзіўся, ўдзельнічаць у прыняцці вырашэнняў, якія на яго ўплываюць.'
     product:
       header_html: 'Калі мы чуем <strong>усе меркаванні</strong>, мы здольны прыняць <strong>лепшае вырашэнне</strong>.'
       step1:
